# srishti

./: .env.example  .gitignore  00_PLAN_INDEX.md  01_Overall_Architecture.md  02_Agent_Detailed_Plans.md  03_Multi_Agent_Orchestration.md  04_Data_Strategy.md  05_AI_ML_Features.md  06_Tech_Stack.md  07_UI_UX_Plan.md  08_Deliverables_Timeline.md  09_Evaluation_Strategy.md  PHASES.md  PROGRESS.md  README.md  STATUS.md  railway.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: base_agent.py  exhibitor_agent.py  gtm_agent.py  ops_agent.py  orchestrator.py  pricing_agent.py  speaker_agent.py  sponsor_agent.py  venue_agent.py
backend/app/api/: websocket.py
backend/app/api/routes/: agents.py  data.py  events.py  outreach.py  simulation.py
backend/app/data/: database.py  models.py
backend/app/domain/: base.py
backend/app/scrapers/: __init__.py  base.py  normalize.py  pipeline.py
backend/app/scrapers/conferences/: conf_tech.py  dev_events.py  luma.py  ten_times.py
backend/app/scrapers/india/: base_crawl.py  bookmyshow.py  devfolio.py  district.py  mepass.py  skillboxes.py
backend/app/scrapers/music/: jambase.py  songkick.py  wikipedia_music.py
backend/app/scrapers/sports/: espn.py  wikipedia_sports.py
backend/app/scrapers/ticketing/: ticketmaster_api.py
backend/app/services/: tools.py
data/: DATA_SOURCES.md  conferences_2025_2026.csv  conferences_2025_2026.json  music_festivals_2025_2026.csv  music_festivals_2025_2026.json  sporting_events_2025_2026.csv  sporting_events_2025_2026.json
(+35 files in other folders)
